terraform/ecs-financas-despesas-processador.tf
# ==========================================================
# 1. IAM ROLES
# ==========================================================

# A. Role de Execução (Infraestrutura)
resource "aws_iam_role" "role_task_execution_financas_desepesas_processador" {
  name = "role-task-execution-financas-despesas-processador-${var.ambiente}"
  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [{
      Action = "sts:AssumeRole",
      Effect = "Allow",
      Principal = { Service = "ecs-tasks.amazonaws.com" }
    }]
  })
}

# Política de Execução Consolidada (ECR + Logs + Secrets)
resource "aws_iam_policy" "policy_task_execution_financas_despesas_processador" {
  name        = "policy-task-execution-financas-despesas-processador-${var.ambiente}"
  description = "Permissoes para o ECS puxar imagens do ECR, gravar logs e ler secrets"

  policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Effect = "Allow"
        Action = [
          "ecr:GetAuthorizationToken",
          "ecr:BatchCheckLayerAvailability",
          "ecr:GetDownloadUrlForLayer",
          "ecr:BatchGetImage"
        ]
        Resource = "*"
      },
      {
        Effect = "Allow"
        Action = [
          "logs:CreateLogStream",
          "logs:PutLogEvents"
        ]
        Resource = "*"
      },
      {
        Effect   = "Allow"
        Action   = [
          "secretsmanager:GetSecretValue"
        ]
        Resource = "*"
      }
    ]
  })
}

resource "aws_iam_role_policy_attachment" "attach_execution_standard_processador" {
  role       = aws_iam_role.role_task_execution_financas_desepesas_processador.name
  policy_arn = aws_iam_policy.policy_task_execution_financas_despesas_processador.arn
}

resource "aws_iam_role_policy_attachment" "role_policy_ecs_task_execution_managed_processador" {
  role       = aws_iam_role.role_task_execution_financas_desepesas_processador.name
  policy_arn = "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
}

# B. Task Role (Aplicação - SQS)
resource "aws_iam_role" "role_task_financas_despesas_processador" {
  name = "role-task-financas-despesas-processador-${var.ambiente}"
  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [{ Action = "sts:AssumeRole", Effect = "Allow", Principal = { Service = "ecs-tasks.amazonaws.com" } }]
  })
}

resource "aws_iam_policy" "policy_task_financas_despesas_processador" {
  name = "policy-task-financas-despesas-processador-${var.ambiente}"
  policy = jsonencode({
    Version = "2012-10-17"
    Statement = [{
      Effect = "Allow",
      Action = [
        "sqs:ReceiveMessage",
        "sqs:DeleteMessage",
        "sqs:GetQueueAttributes",
        "sqs:GetQueueUrl",
        "sqs:CreateQueue",
        "sqs:SendMessage"
      ],
      Resource = [
        "arn:aws:sqs:sa-east-1:841816327169:sqs-comando-nova-despesa-${var.ambiente}.fifo",
        "arn:aws:sqs:sa-east-1:841816327169:sqs-retorno-nova-fatura-${var.ambiente}"
      ]
    }]
  })
}

resource "aws_iam_role_policy_attachment" "attach_task_resources_processador" {
  role       = aws_iam_role.role_task_financas_despesas_processador.name
  policy_arn = aws_iam_policy.policy_task_financas_despesas_processador.arn
}

# ==========================================================
# 2. RECURSOS DO SERVIÇO
# ==========================================================

resource "aws_security_group" "sg_ecs_financas_despesas_processador" {
  name        = "ecs-financas-despesas-processador-sg-${var.ambiente}"
  description = "Permite trafego para o servico de integracao"
  vpc_id      = aws_vpc.vpc_financas.id

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["10.0.1.0/24"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(var.common_tags, { Name = "ecs-financas-despesas-processador-sg-${var.ambiente}" })
}

resource "aws_cloudwatch_log_group" "log_group_ecs_financas_despesas_processador" {
  name              = "/ecs/financas-despesas-processador-${var.ambiente}"
  retention_in_days = 7
}

resource "aws_ecs_task_definition" "ecs_task_definition_financas_despesas_processador" {
  family                   = "ecs-financas-despesas-processador-${var.ambiente}"
  requires_compatibilities = ["FARGATE"]
  network_mode             = "awsvpc"
  cpu                      = 256
  memory                   = 512
  execution_role_arn       = aws_iam_role.role_task_execution_financas_desepesas_processador.arn
  task_role_arn            = aws_iam_role.role_task_financas_despesas_processador.arn

  container_definitions = jsonencode([
    {
      name      = "financas-despesas-processador"
      image     = "841816327169.dkr.ecr.${var.aws_region}.amazonaws.com/${var.ecr_financas_despesas_processador}:latest"
      essential = true

      portMappings = [{
        containerPort = 8080,
        hostPort = 8080,
        protocol = "tcp"
      }]

      secrets = [
        {
          name      = "AWS_RDS_PASSWORD"
          valueFrom = aws_secretsmanager_secret.rds_password.arn
        },
        {
          name      = "AWS_RDS_URL"
          valueFrom = aws_secretsmanager_secret.rds_url.arn
        }
      ]

      logConfiguration = {
        logDriver = "awslogs"
        options = {
          "awslogs-group"         = "/ecs/financas-despesas-processador-${var.ambiente}"
          "awslogs-region"        = var.aws_region
          "awslogs-stream-prefix" = "ecs"
        }
      }

    }
  ])
}

resource "aws_ecs_service" "ecs_service_financas_despesas_processador" {
  name            = "ecs-financas-despesas-processador-service"
  cluster         = aws_ecs_cluster.ecs_cluster_financas.id
  task_definition = aws_ecs_task_definition.ecs_task_definition_financas_despesas_processador.arn
  desired_count   = var.ecs_tasks_desejadas

  capacity_provider_strategy {
    capacity_provider = "FARGATE_SPOT"
    weight            = 1
  }

  network_configuration {
    subnets          = [aws_subnet.subnet_financas_publica_az_a.id]
    security_groups  = [aws_security_group.sg_ecs_financas_despesas_processador.id]
    assign_public_ip = true
  }
}
